--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <table cellspacing="20">
         <tr>
-            <td><img src="img-7526-54b2_wm.jpg" alt="Ford Everest 2023"></td>
+            <td><img src="images/ford-ev2.png" alt="Ford Everest 2023"></td>
             <td>
                 <h1>Lester Estrella</h1>
                 <p><em>Founder and CEO of <a href="https://aoesolutions.com">AOE Solutions Inc</a>.</em></p>
